--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -5,7 +5,7 @@
       <a href="/">
         <div class="avatar transition ease-in-out w-1/2 hover:scale-[102%] block m-auto mt-3 mb-6">
           <div>
-            <img class="mask mask-circle" src="/profile.jpg" alt="profile image" />
+            <img class="mask mask-circle" src="/1565644582122.jpeg" alt="profile image" />
           </div>
         </div>
       </a>
@@ -14,10 +14,10 @@
       <!-- Sidebar content here -->
       <li><a id="home" href="/">Home</a></li>
       <li><a id="projects" href="/projects">Projects</a></li>
-      <li><a id="services" href="/services">Services</a></li>
+      <!-- <li><a id="services" href="/services">Services</a></li>
       <li><a id="store" href="/store">Store</a></li>
       <li><a id="blog" href="/blog/">Blog</a></li>
-      <li><a id="cv" href="/cv">CV</a></li>
+      <li><a id="cv" href="/cv">CV</a></li> -->
       <li><a href="mailto:contact.manuelernestog@gmail.com">Contact</a></li>
     </ul>
     <div class="social-icons px-4 my-2 flex self-center">
