adding the project link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,9 +35,9 @@ const last_posts = posts.slice(0, 3);
 
     <HorizontalCard
       title="100+ USMLE STEP 1 Exam Questions by GPT3 "
-      img="/post_img.webp"
+      img="/Screenshot 2023-03-22 at 5.32.25 PM.png"
       desc="I used Flutter to test if GPT-3 can replicate past USMLE Step 1 questions, showcasing my skills while exploring AI-generated questions in medical education."
-      url="#"
+      url="/blog/post1"
       badge="NEW"
       tag = 'Flutter'
     />
@@ -55,6 +55,11 @@ const last_posts = posts.slice(0, 3);
     desc="The project aimed to create a user-friendly app for generating personalized flashcards from uploaded PDF files. Using GPT-3 and Flutter, the app produced accurate and high-quality flashcards that could be quickly exported into ANKI. "
     url="#"
   />
+
+        <div class="mt-8">
+        <a class="btn" href="/projects" target="_blank"> See More!</a>
+        <!-- <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a> -->
+      </div>
 
 
     <div>
