change color and added text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const last_posts = posts.slice(0, 3);
     </div>
 
     <HorizontalCard
-      title="100+ USMLE STEP 1 Exam Questions by GPT3 "
+      title="Can ChatGPT Help You Overcome the Challenges of Studying for the USMLE? "
       img="/Screenshot 2023-03-22 at 5.32.25 PM.png"
       desc="I used Flutter to test if GPT-3 can replicate past USMLE Step 1 questions, showcasing my skills while exploring AI-generated questions in medical education."
       url="/blog/post1"
