adding my new project

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const last_posts = posts.slice(0, 3);
         >
       </div>
       <div class="mt-8">
-        <a class="btn" href="https://twitter.com/manuelernestog" target="_blank"> Let's connect!</a>
+        <a class="btn" href="https://www.linkedin.com/in/asad-moulvi-aaa278175/g" target="_blank"> Let's connect!</a>
         <!-- <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a> -->
       </div>
     </div>
@@ -43,10 +43,10 @@ const last_posts = posts.slice(0, 3);
     />
     <div class="divider my-0"></div>
     <HorizontalCard
-    title="Medical transcription plus a QA Bot using ChatGPT API"
-    img="/post_img.webp"
+    title="Lets change medical transcription forever"
+    img="/Medical-Transcription.webp"
     desc="Overall, the project aimed to streamline the process of transcribing and analyzing patient encounters by utilizing advanced AI technologies like the Whisper API, Pinecone, and GPT-3."
-    url="#"
+    url="/blog/post2"
   />
     <div class="divider my-0"></div>
     <HorizontalCard
@@ -56,10 +56,6 @@ const last_posts = posts.slice(0, 3);
     url="#"
   />
 
-        <div class="mt-8">
-        <a class="btn" href="/projects" target="_blank"> See More!</a>
-        <!-- <a href="https://github.com/manuelernestog/astro-modern-personal-website" target="_blank" class="btn btn-outline ml-5"> Get This template</a> -->
-      </div>
 
 
     <div>
